# LwIPC_codex

./: .gitignore  CMakeLists.txt  README.md
examples/: example_bag_recorder.cpp  example_ipc_stress.cpp  example_monitor.cpp  example_network_bridge.cpp  example_node_factory.cpp  example_pubsub.cpp  example_sensor.cpp  example_signal_slot.cpp
include/lwipc/: atomic_rw_lock.hpp  bag_recorder.hpp  broker.hpp  core.hpp  executor.hpp  heartbeat.hpp  memory_pool.hpp  message.hpp  metrics.hpp  proto_codec.hpp  ring_buffer_mpmc.hpp  ring_buffer_spsc.hpp  sensor_interface.hpp  shm_channel.hpp  shm_segment.hpp  signal_slot.hpp  system_monitor.hpp  topology.hpp  transport.hpp
proto/: lwipc_frame.proto
src/: bag_recorder.cpp  broker.cpp  executor.cpp  heartbeat.cpp  memory_pool.cpp  proto_codec.cpp  sensor_interface.cpp  shm_channel.cpp  shm_segment.cpp  system_monitor.cpp  topology.cpp  transport.cpp
src/discovery/: service_discovery.cpp  service_discovery.h
src/node/: node.cpp  node.h  receiver.cpp  receiver.h  transmitter.cpp  transmitter.h
tests/: run_integration_tests.sh  test_atomic_rwlock.cpp  test_bag.cpp  test_broker.cpp  test_core.cpp  test_executor.cpp  test_heartbeat.cpp  test_memory_pool.cpp  test_metrics.cpp  test_monitor.cpp  test_proto_codec.cpp  test_ringbuffer.cpp  test_ringbuffer_mpmc.cpp  test_sensor.cpp  test_shm.cpp  test_shm_channel.cpp  test_signal_slot.cpp  test_topology.cpp  test_transport.cpp
